--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
 language: python
 python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "3.5.0b3"
-  - "3.5-dev"
-  - "nightly"
-# command to install dependencies
+    - "2.6"
+    - "2.7"
+    - "3.2"
+    - "3.3"
+    - "3.4"
+    - "3.5.0b3"
+    - "3.5-dev"
+    - "nightly"
+before_install:
+    - pip install pytest pytest-cov
+    - pip install coveralls
 install: "pip install -r requirements.txt"
-# command to run tests
-script: py.test
+script:
+    - py.test
+after_success:
+    - coveralls
