--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ python:
 before_install:
     - pip install pytest pytest-cov
     - pip install coveralls
-    - pip install chardet cchardet
-install: "pip install -r requirements.txt"
+install: 
+    - pip install -r requirements.txt
+    - pip install -r optional-packages.txt
 script:
     - py.test --cov=lasio
 after_success:
