--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
     - "3.3"
     - "3.4"
 before_install:
+    - pip install coverage==3.7.1
     - pip install pytest pytest-cov
     - pip install coveralls
 install: 
