get all email notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ notifications:
     recipients:
       - kinverarity@hotmail.com
     on_success: change
-    on_failure: change
+    on_failure: always
