--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: python
 python:
     - "2.6"
     - "2.7"
-    - "3.2"
     - "3.3"
     - "3.4"
     - "3.5"
@@ -25,9 +24,9 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas chardet pytest requests
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas pytest requests
   - source activate test-environment
-  - pip install namedlist ordereddict cchardet argparse 
+  - pip install namedlist ordereddict cchardet argparse chardet
   - pip install coverage==3.7.1
   - pip install openpyxl==2.0.3
   - pip install pytest-cov coveralls
