--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ install:
   # version is the same.
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
       wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    else://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
@@ -34,10 +33,8 @@ install:
   - python setup.py install
 
 script:
-    - py.test --cov=lasio
-
-after_success:
-    - coveralls
+    - py.test
+      wget https
 
 notifications:
   email:
