--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ install:
   # version is the same.
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
       wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
-    else://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
@@ -27,14 +28,11 @@ install:
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas pytest requests
   - source activate test-environment
   - pip install ordereddict cchardet argparse chardet
-  - pip install coverage==3.7.1
   - pip install openpyxl==2.0.3
-  - pip install pytest-cov coveralls
   - python setup.py install
 
 script:
     - py.test
-      wget https
 
 notifications:
   email:
