--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy pandas pytest requests
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy=1.9.3 pandas pytest requests
   - source activate test-environment
   - pip install ordereddict cchardet argparse chardet
   - pip install openpyxl==2.0.3
