--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: python
-
 python:
     # - "2.6"
     - "2.7"
@@ -7,17 +6,15 @@ python:
     - "3.4"
     - "3.5"
     - "3.6"
-
 install:
-  - pip install numpy
-  - pip install pandas pytest requests
-  - pip install ordereddict cchardet argparse chardet
-  - pip install openpyxl==2.0.3
+  - pip install -r requirements.txt
+  - pip install -r optional-packages.txt
+  # - pip install pandas pytest requests
+  # - pip install ordereddict cchardet argparse chardet
+  # - pip install openpyxl==2.0.3
   - python setup.py install
-
 script:
-    - travis_wait py.test
-
+    - pytest
 notifications:
   email:
     recipients:
