--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ python:
     # - "2.6"
     - "2.7"
     # - "3.3"
-    - "3.4"
+    # - "3.4"
     - "3.5"
     - "3.6"
+    - "3.7-dev"
 install:
   - pip install -r requirements.txt
   - pip install -r optional-packages.txt
