--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
     # - "3.4"
     - "3.5"
     - "3.6"
-    - "3.7-dev"
+    # - "3.7-dev"
 install:
   - pip install -r requirements.txt
   - pip install -r optional-packages.txt
