--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - python setup.py install
 script:
     - pytest
-    - codecov
+    # - codecov
 notifications:
   email:
     recipients:
