--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,15 @@
 language: python
 python:
-    # - "2.6"
     - "2.7"
-    # - "3.3"
-    # - "3.4"
     - "3.5"
     - "3.6"
-    # - "3.7-dev"
+    - "3.7"
+    - "3.8"
 install:
-  - pip install -r requirements.txt
-  - pip install -r optional-packages.txt
-  # - pip install pandas pytest requests
-  # - pip install ordereddict cchardet argparse chardet
-  # - pip install openpyxl==2.0.3
-  - python setup.py install
+  - pip install -e .
+  - pip install pytest>=3.6 pytest-cov coverage pathlib
 script:
     - pytest
-    # - codecov
 notifications:
   email:
     recipients:
