Add before_install setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
     - "3.6"
     - "3.7"
     - "3.8"
+before_install:
+  - python --version
+  - pip install -U pip
+  - pip install -U pytest
 install:
   - pip install --editable ".[all]"
   - pip install pytest>=3.6 pytest-cov coverage pathlib
