--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install numpy cchardet openpxyl pandas
+        pip install numpy cchardet openpyxl pandas
         pip install pytest coverage pytest-cov codecov pathlib
     - name: Test with pytest
       run: |
