--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.5, 3.6, 3.7, 3.8]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -22,9 +22,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install numpy cchardet openpyxl pandas
-        pip install pytest coverage pytest-cov codecov pathlib
+        python -m pip install --upgrade pip setuptools wheel
+        pip install ".[all]"
+        pip install pytest>=3.6 pytest-cov coverage pathlib
     - name: Test with pytest
       run: |
-        pytest --cov-fail-under=80 --cov-branch
+        pytest
