--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -4,7 +4,7 @@
 # For more information see:
 # https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python CI 
+name: Python CI
 
 on: [push, pull_request]
 
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         pip install ".[all]"
-        pip install pytest>=3.6 pytest-cov coverage pathlib
+        pip install ".[test]"
     - name: Test with pytest
       run: |
         pytest
